--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.12"
+    "astro": "^4.16.12",
+    "@astrojs/react": "^3.0.10",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "kafkajs": "^2.2.4",
+    "gsap": "^3.12.5",
+    "@fontsource/inter": "^5.0.17",
+    "@fontsource/space-grotesk": "^5.0.17"
   }
 }
