--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "kafkajs": "^2.2.4",
     "gsap": "^3.12.5",
-    "@fontsource/inter": "^5.0.17",
-    "@fontsource/space-grotesk": "^5.0.17"
+    "@fontsource/orbitron": "^5.0.17",
+    "@fontsource/chakra-petch": "^5.0.17"
   }
 }
